build_output.txt
[  0%] Built target BGACore_autogen_timestamp_deps
[  7%] Built target BGACore_autogen
[ 61%] Built target BGACore
[ 61%] Built target TestRpgAnalyzer_autogen_timestamp_deps
[ 69%] Built target TestRpgAnalyzer_autogen
[ 76%] Building CXX object BGA/tests/CMakeFiles/TestRpgAnalyzer.dir/test_rpg_analyzer.cpp.o
/home/jop/work/NST/NST/BGA/tests/test_rpg_analyzer.cpp: In member function ‘void TestRpgAnalyzer::initTestCase()’:
/home/jop/work/NST/NST/BGA/tests/test_rpg_analyzer.cpp:50:94: error: ‘qrand’ was not declared in this scope; did you mean ‘srand’?
   50 |                 destPath = dataPath + "/" + it.fileInfo().baseName() + "_" + QString::number(qrand()) + ".json";
      |                                                                                              ^~~~~
      |                                                                                              srand
gmake[3]: *** [BGA/tests/CMakeFiles/TestRpgAnalyzer.dir/build.make:100: BGA/tests/CMakeFiles/TestRpgAnalyzer.dir/test_rpg_analyzer.cpp.o] Error 1
gmake[2]: *** [CMakeFiles/Makefile2:545: BGA/tests/CMakeFiles/TestRpgAnalyzer.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:552: BGA/tests/CMakeFiles/TestRpgAnalyzer.dir/rule] Error 2
gmake: *** [Makefile:281: TestRpgAnalyzer] Error 2
